Tue Apr 10 20:57:00 BST 2006    Simon Arlott <oidentd@fire.lp0.eu>

    * Fix bug handling NAT with a different destination port on Linux.

    * Fix forwarding when the destination port is different.

    * Add an option that does forwarding only if the masquerading file lookup fails.

    * Support Layer 3 Independent Connection tracking on Linux.

Mon May 22 00:20:15 EDT 2006    Ryan McCabe <ryan@numb.org>

    * Released as version 2.0.8.

    * Removed spaces between commas and colons from responses.

    * Pulled in patches for Linux from Debian.

    * Pulled in Darwin patches from fink and
      http://sbutler.typepad.com/oidentd-2.0.7-darwin-fix.patch.

    * Pulled in NetBSD patches from pkgsrc/net/oidentd/patches/patch-ac.

    * Pulled in patches for FreeBSD from FreeBSD ports
      (ports/security/oidentd/files/patch-unprivileged_ipv6).

Thu Jan 26 16:32:18 CET 2006    Christof Douma <christof@douma.eu.org>

    * Open masquerading options before dropping permissions on linux.

Fri Jul 11 10:11:38 EDT 2003    Ryan McCabe <ryan@numb.org>

    * Really fix the bug with random ident replies.

    * Build fixes (specifically, for Solaris).

Sun Apr 27 16:01:51 EDT 2003    Ryan McCabe <ryan@numb.org>

    * Released as version 2.0.6.

    * Fixed a build problem on some versions of FreeBSD when NAT support
      is included.
        - Problem reported by John Blazek <freebsd@logicalsolutns.com>

    * Made random replies 12 characters long. I guess some programs don't
      like it when they get a 512-byte long random reply.

Wed Apr 23 19:59:42 EDT 2003    Ryan McCabe <ryan@numb.org>

    * Applied patches from henke@insync.net to
        - Improve PRNG seeding and random number selection.

        - Add support for running in the foreground, logging only to stderr,
          and for inetd support and daemontools support.

Thu Feb 13 23:28:14 EST 2003    Ryan McCabe <ryan@numb.org>

    * Make it build again on recent versions of Darwin.
